cc_talk_codegen/tests/no_compile/union-fails.rs
use cc_talk_codegen::command;

#[command]
pub union MyType {
    a: u32,
    b: u8,
}

pub fn main() {}
